--- a/src/index.html
+++ b/src/index.html
@@ -93,9 +93,8 @@
       </div>
     </nav>
     <div class="container mx-auto">
-      <div id="all_card">
+      <div class="deck-tab-groups">
       </div>
-      <div id="edited_deck"></div>
     </div>
     <div
       aria-hidden="true"
