--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,17 @@
       </div>
     </nav>
     <div class="container mx-auto">
-      <div class="deck-tab-groups">
+      <div class="tab-group-wrapper md:hidden">
+        <ul class="tab-group">
+          <li class="tab active">
+            カードリスト
+          </li>
+          <li class="tab">
+            デッキ
+          </li>
+        </ul>
+      </div>
+      <div class="deck-tab-items">
       </div>
     </div>
     <div
