デッキの編集機能を追加

--- a/src/index.html
+++ b/src/index.html
@@ -32,23 +32,6 @@
             >非公式 ナワバトラーデッキビルダー</span
           >
         </div>
-        <button
-          id="save_cardlist_file"
-          class="mr-2 button button-sm button-default"
-          title="ファイルに保存"
-          type="button"
-        >
-          <i class="fa-solid fa-download"></i>
-        </button>
-        <button
-          id="load_cardlist_file"
-          class="mr-2 button button-sm button-default"
-          title="ファイルの読み込み"
-          type="button"
-        >
-          <i class="fa-solid fa-file-import"></i
-          ><input type="file" class="hidden" accept="application/json" />
-        </button>
         <div class="flex-auto"></div>
         <div class="relative">
           <button
@@ -99,7 +82,7 @@
             カードリスト
           </li>
           <li class="tab">
-            デッキ
+            デッキ (0/15)
           </li>
         </ul>
       </div>
