未作成メッセージを追加

--- a/src/index.html
+++ b/src/index.html
@@ -75,22 +75,27 @@
         </div>
       </div>
     </nav>
-    <div class="container mx-auto">
+    <div class="mx-3">
       <div class="mt-3 card">
-        <div class="card__title">
-          <div>デッキ一覧</div>
-        </div>
-        <div class="card__body">
-          <div class="form-label">作成済みデッキ</div>
-          <div id="created_decks" class="mt-2 table__wrapper">
-            <table class="table">
-              <colgroup>
-                <col />
-                <col class="w-40" />
-              </colgroup>
-              <tbody>
-              </tbody>
-            </table>
+        <div class="max-w-4xl mx-auto">
+          <div class="card__title">
+            <div>デッキ一覧</div>
+          </div>
+          <div class="card__body">
+            <div class="form-label">作成済みデッキ</div>
+            <div id="created_decks" class="mt-2 table__wrapper">
+              <table class="table">
+                <colgroup>
+                  <col />
+                  <col class="w-40" />
+                </colgroup>
+                <tbody>
+                  <tr class="nocontent">
+                    <td colspan="2">作成済みのものはありません。</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
