文言の調整

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       >
         <div class="flex items-center">
           <span
-            class="mr-6 text-xl font-semibold whitespace-nowrap dark:text-white"
+            class="mr-6 text-xl font-semibold dark:text-white"
             >非公式 ナワバトラーデッキビルダー</span
           >
         </div>
