--- a/src/index.html
+++ b/src/index.html
@@ -22,69 +22,78 @@
   <body class="break-all bg-gray-100 dark:bg-gray-900">
     <div class="w-screen h-screen overflow-auto">
       <nav class="px-2 pb-3 bg-blue-300 border-gray-200 dark:bg-indigo-900">
-        <div class="container flex flex-wrap items-center mx-auto">
+        <div class="container flex flex-wrap items-center px-3 mx-auto">
           <span class="mt-3 mr-5 text-xl font-semibold dark:text-white"
             ><span class="mr-2">非公式</span>
             <span>ナワバトラーデッキビルダー</span></span
           >
-          <form
-            class="relative w-48 mt-3 mr-3"
-            id="form_deckCodeLoad"
-            data-clearable
-          >
-            <input
-              class="pr-16 form-input input_cardlist_serch"
-              type="text"
-              placeholder="デッキコード読込"
-            />
-            <button
-              class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
-              type="submit"
-              title="デッキコード読み込み"
+          <div class="flex-auto"></div>
+          <div class="flex items-center">
+            <form
+              class="relative w-48 mt-3 mr-3 shrink-0"
+              id="form_deckCodeLoad"
+              data-clearable
             >
-              <i class="fa-solid fa-right-to-bracket"></i>
-            </button>
-            <i class="input-clear right-12 fa fa-circle-xmark"></i>
-          </form>
-          <div class="relative flex justify-end h-10 mt-3 grow basis-11">
-            <div class="absolute top-0 right-0">
+              <input
+                class="pr-16 form-input input_cardlist_serch"
+                type="text"
+                placeholder="デッキコード読込"
+              />
               <button
-                id="themeSettingButton"
-                type="button"
-                class="relative flex items-center button button-sm button-default"
-                title="テーマの変更"
+                class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
+                type="submit"
+                title="デッキコード読み込み"
               >
-                <i class="w-4 h-4 fa-solid fa-circle-half-stroke"></i>
-                <span class="theme-setting-label">テーマ変更</span>
+                <i class="fa-solid fa-right-to-bracket"></i>
               </button>
-              <div id="themeButtonGroup">
+              <i class="input-clear right-12 fa fa-circle-xmark"></i>
+            </form>
+            <button
+              id="button-info"
+              class="mt-3 mr-2 button button-sm button-alt"
+            >
+              <i class="fa-regular fa-circle-question"></i>
+            </button>
+            <div class="relative flex justify-end h-10 mt-3 shrink-0 w-11">
+              <div class="absolute right-0 top-px">
                 <button
-                  data-theme_mode="light"
-                  title="ライトモード"
+                  id="themeSettingButton"
                   type="button"
-                  class="flex items-center mt-1 pointer-events-auto button button-sm button-default"
+                  class="relative flex items-center button button-sm button-default"
+                  title="テーマの変更"
                 >
-                  <i class="w-4 h-4 fa-regular fa-sun"></i>
-                  <span class="theme-setting-label">ライト</span>
+                  <i class="w-4 h-4 fa-solid fa-circle-half-stroke"></i>
+                  <span class="theme-setting-label">テーマ変更</span>
                 </button>
-                <button
-                  data-theme_mode="dark"
-                  title="ダークモード"
-                  type="button"
-                  class="flex items-center mt-1 pointer-events-auto button button-sm button-default"
-                >
-                  <i class="w-4 h-4 fa-solid fa-moon"></i>
-                  <span class="theme-setting-label">ダーク</span>
-                </button>
-                <button
-                  data-theme_mode="system"
-                  title="システム設定を使用"
-                  type="button"
-                  class="flex items-center mt-1 pointer-events-auto button button-sm button-default"
-                >
-                  <i class="w-4 h-4 fa-solid fa-computer"></i>
-                  <span class="theme-setting-label">システム</span>
-                </button>
+                <div id="themeButtonGroup">
+                  <button
+                    data-theme_mode="light"
+                    title="ライトモード"
+                    type="button"
+                    class="flex items-center mt-1 pointer-events-auto button button-sm button-default"
+                  >
+                    <i class="w-4 h-4 fa-regular fa-sun"></i>
+                    <span class="theme-setting-label">ライト</span>
+                  </button>
+                  <button
+                    data-theme_mode="dark"
+                    title="ダークモード"
+                    type="button"
+                    class="flex items-center mt-1 pointer-events-auto button button-sm button-default"
+                  >
+                    <i class="w-4 h-4 fa-solid fa-moon"></i>
+                    <span class="theme-setting-label">ダーク</span>
+                  </button>
+                  <button
+                    data-theme_mode="system"
+                    title="システム設定を使用"
+                    type="button"
+                    class="flex items-center mt-1 pointer-events-auto button button-sm button-default"
+                  >
+                    <i class="w-4 h-4 fa-solid fa-computer"></i>
+                    <span class="theme-setting-label">システム</span>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
