--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="w-screen h-screen overflow-auto">
       <nav class="px-2 pb-3 bg-blue-300 border-gray-200 dark:bg-indigo-900">
         <div class="container flex flex-wrap items-center px-3 mx-auto">
-          <span class="mt-3 mr-5 text-xl font-semibold dark:text-white"
+          <span class="mt-3 text-xl font-semibold dark:text-white"
             ><span class="mr-2">非公式</span>
             <span>ナワバトラーデッキビルダー</span></span
           >
@@ -99,7 +99,7 @@
           </div>
         </div>
       </nav>
-      <main class="mx-3">
+      <main class="m-4">
         <div class="p-0 mt-3 overflow-hidden card expandable-wrapper">
           <div class="max-w-4xl mx-auto expandable">
             <div id="created_decks" class="m-5 table__wrapper">
@@ -126,7 +126,7 @@
             </button>
           </div>
         </div>
-        <div class="tab-group-wrapper md:hidden">
+        <div class="mt-3 tab-group-wrapper md:hidden">
           <ul class="tab-group">
             <li class="tab active">カードリスト</li>
             <li class="tab">デッキ (0/15)</li>
