--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,13 @@
             ><span class="mr-2">非公式</span>
             <span>ナワバトラーデッキビルダー</span></span
           >
+          <button
+            id="button-info"
+            class="mt-3 ml-3 button button-sm button-alt"
+            title="このサイトについて"
+          >
+            <i class="fa-regular fa-circle-question"></i>
+          </button>
           <div class="flex-auto"></div>
           <div class="flex items-center">
             <form
@@ -48,12 +55,6 @@
               </button>
               <i class="input-clear right-12 fa fa-circle-xmark"></i>
             </form>
-            <button
-              id="button-info"
-              class="mt-3 mr-2 button button-sm button-alt"
-            >
-              <i class="fa-regular fa-circle-question"></i>
-            </button>
             <div class="relative flex justify-end h-10 mt-3 shrink-0 w-11">
               <div class="absolute right-0 top-px">
                 <button
