twitterカードの設定

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,16 @@
       referrerpolicy="no-referrer"
     />
     <title>非公式 ナワバトラーデッキビルダー</title>
+    <!-- OGPの設定 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="非公式 ナワバトラーデッキビルダー" />
+    <meta property="og:description" content="ナワバトラーのデッキ構築ができるサイトです" />
+    <meta property="og:url" content="https://tableturf-battle.khr32.com" />
+    <meta property="og:site_name" content="非公式 ナワバトラーデッキビルダー" />
+    <meta property="og:image" content="./assets/summaryx.png" />
+    <!-- Twitterカードの設定 -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@khr32" />
   </head>
   <body class="break-all bg-gray-100 dark:bg-gray-900">
     <div class="w-screen h-screen overflow-auto">
