--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
     <meta property="og:description" content="ナワバトラーのデッキ構築ができるサイトです" />
     <meta property="og:url" content="https://tableturf-battle.khr32.com" />
     <meta property="og:site_name" content="非公式 ナワバトラーデッキビルダー" />
-    <meta property="og:image" content="https://tableturf-battle.khr32.com/assets/summary.png" />
+    <meta property="og:image" content="https://tableturf-battle.khr32.com/summary.png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
     <!-- Twitterカードの設定 -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@khr32" />
