--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="<%= require('@/assets/img/favicon.svg').default %>" />
+    <link rel="apple-touch-icon" href="<%= require('@/assets/img/apple-touch-icon.png').default %>" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +26,7 @@
     <meta property="og:description" content="ナワバトラーのデッキ構築ができるサイトです" />
     <meta property="og:url" content="https://tableturf-battle.khr32.com" />
     <meta property="og:site_name" content="非公式 ナワバトラーデッキビルダー" />
-    <meta property="og:image" content="https://tableturf-battle.khr32.com/summary.png" />
+    <meta property="og:image" content="https://tableturf-battle.khr32.com/img/summary.png" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="600" />
     <!-- Twitterカードの設定 -->
