--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Sans+JP:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -37,7 +37,7 @@
     <div class="w-screen h-screen overflow-auto">
       <nav class="px-2 pb-3 bg-blue-300 border-gray-200 dark:bg-indigo-900">
         <div class="container flex flex-wrap items-center px-3 mx-auto">
-          <span class="mt-3 text-xl font-semibold dark:text-white"
+          <span class="mt-3 text-xl font-medium dark:text-white"
             ><span class="mr-2">非公式</span>
             <span>ナワバトラーデッキビルダー</span></span
           >
