cssの整理・説明追加

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       referrerpolicy="no-referrer"
     />
     <title>非公式 ナワバトラーデッキビルダー</title>
+    <meta name="description" content="ナワバトラーのデッキ構築ができるサイトです">
     <!-- OGPの設定 -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="非公式 ナワバトラーデッキビルダー" />
