--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="<%= require('@/assets/img/favicon.svg').default %>" />
-    <link rel="apple-touch-icon" href="<%= require('@/assets/img/apple-touch-icon.png').default %>" />
+    <link rel="icon" type="image/svg+xml" href="<%= require('@/assets/img/favicon.svg') %>" />
+    <link rel="apple-touch-icon" href="<%= require('@/assets/img/apple-touch-icon.png') %>" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
