情報文言の修正

--- a/src/start/appInfoDialog/modal.template.html
+++ b/src/start/appInfoDialog/modal.template.html
@@ -1,21 +1,21 @@
 <div>
   <ul class="mb-3 ml-6 space-y-2 leading-relaxed list-disc">
     <li>
-      このサイトは、スプラトゥーン３のナワバトラーのデッキ構築の補助を目的として作成しました。ファンメイドのサイトです。<br />
+      このサイトは、スプラトゥーン３のナワバトラーのデッキ構築の補助を目的として作成したファンメイドのサイトです。<br />
       ゲームの開発元とは一切関係ありません。
     </li>
     <li>
       マス数やスペシャルポイントなどを条件に検索や並べ替えて表示ができます。
     </li>
     <li>
-      デッキ編集画面で、<i class="px-2 fa fa-circle-info"></i>のアイコンをクリックすると、デッキ内のカードのマス数、スペシャルポイントの分布を確認することができます。
+      デッキ編集画面で、<i class="px-1 fa fa-circle-info"></i>のアイコンをクリックすると、デッキ内のカードのマス数、スペシャルポイントの分布を確認することができます。
     </li>
     <li>
       作成したデッキはお使いのブラウザ上に保存できる他、コードを発行してSNSなどで共有することができます。<br />
       （サーバにはユーザの情報を一切送信しておりません。）
     </li>
     <li>
-      不具合がありましたら、お手数ですが開発のTwitterまでご連絡いただけますと幸いです。
+      不具合がありましたら、お手数ですが開発者のTwitterまでご連絡いただけますと幸いです。
     </li>
   </ul>
   <div>
