fix: Change icon to X

--- a/src/start/appInfoDialog/modal.template.html
+++ b/src/start/appInfoDialog/modal.template.html
@@ -15,17 +15,17 @@
       （サーバにはユーザの情報を一切送信しておりません。）
     </li>
     <li>
-      不具合がありましたら、お手数ですが開発者のTwitterまでご連絡いただけますと幸いです。
+      不具合がありましたら、お手数ですが開発者のX(旧:Twitter)までご連絡いただけますと幸いです。
     </li>
   </ul>
   <div>
-    <span class="mr-2">開発者twitter:</span>
     <a
-      class="px-3 py-1 text-xs text-white rounded-full bg-sky-600 hover:text-gray-200 hover:bg-sky-900"
+      class="px-3 py-1 text-xs text-white rounded-full bg-black hover:text-gray-200 hover:bg-gray-900"
       href="https://twitter.com/khr32"
+      title="X"
       target="_blank"
     >
-      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-x-twitter"></i>
       @khr32
     </a>
   </div>
