--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
       </main>
     </div>
     <div aria-hidden="true" tabindex="-1" id="app-modal_container" class="pointer-events-none fixed inset-0 z-50"></div>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
