replacing tailwindcss/pcss to tailwindcss/vite

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Sans+JP:wght@400;500;700&family=Noto+Color+Emoji&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/src/styles/style.css" />
     <title>非公式 ナワバトラーデッキビルダー</title>
     <meta name="description" content="ナワバトラーのデッキ構築ができるサイトです" />
     <!-- OGPの設定 -->
