--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <span class="mt-3 text-xl font-medium dark:text-white"
             ><span class="mr-2">非公式</span> <span>ナワバトラーデッキビルダー</span></span
           >
-          <button id="button-info" class="button button-sm button-alt mt-3 ml-3" title="このサイトについて">
+          <button id="button-about-me" class="button button-sm button-alt mt-3 ml-3" title="このサイトについて">
             <i class="fa-regular fa-circle-question"></i>
           </button>
           <div class="flex-auto"></div>
